@@ -1,3 +1,8 @@
+2011-08-07  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOInfo.c (InfoClassCallCmd): [Bug 3387082]: Plug memory
+	leak in call chain introspection.
+
 2011-07-14  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOOCall.c (TclOORenderCallChain): [Bug 3365156]: Remove
